<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textSize="30dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonJouer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_jouer"
                android:background="@drawable/mauve_min"
                android:elevation="24dp" />


        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btson"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_sonnon"
                android:background="@drawable/mauve"
                android:elevation="24dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonhighscores"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_highscores"
                android:background="@drawable/mauve"
                android:elevation="24dp"
                style="@android:style/Widget.Button" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonquitter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_quitter"
                android:background="@drawable/cellvect_mauve"
                android:elevation="0dp" />

        </TableRow>
    </TableLayout>

</RelativeLayout>
